--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.11.0",
     "typescript": "^3.7.2"
   },
